--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@ footer {
   border-radius: 25px;
   box-shadow: 10px 10px 20px rgba(18, 92, 19, 0.2);
   background-color: #dcefdd;
-  padding: 15px;
+  padding: 0px 25px;
   margin: 20px auto;
   max-width: 400px;
 }
@@ -36,7 +36,7 @@ footer {
 }
 
 .card {
-  width: 200px;
+  width: 160px;
   color: #3e7c17;
   border: 2px solid;
   margin: 20px 0;
@@ -52,6 +52,10 @@ footer {
 .temperature,
 .forecast-date {
   font-weight: 600;
+}
+
+.weather-forecast {
+  text-align: center;
 }
 
 .forecast-temperature-max {
